syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcAuthService";

package auth;

service AuthProtoService {

    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc Login (LoginUserRequest) returns (LoginUserResponse);
	rpc LoginWithRefreshToken (LoginWithRefreshTokenRequest) returns (LoginWithRefreshTokenResponse);
	rpc RevokeRefreshTokens (RevokeRefreshTokensRequest) returns (RevokeRefreshTokensResponse);
}

message LoginUserRequest {
	string login = 1;
	string password = 2;
}

message LoginWithRefreshTokenRequest {
	string refresh_token = 1;
}

message LoginWithRefreshTokenResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message LoginUserResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message RegisterUserRequest {
	string login = 1;
	string email = 2;
	string password = 3;
}

message RegisterUserResponse {
	string userId = 1;
}

message RevokeRefreshTokensRequest {
	string user_id = 1;
}

message RevokeRefreshTokensResponse {
	bool success = 1;
}

